...
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:fitsSystemWindows="true"
        android:focusableInTouchMode="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restaurantRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:scrollbars="vertical"
            android:visibility="@{safeUnbox(restaurantViewModel.isWaiting) || restaurantViewModel.errorMessage != null ? View.GONE : View.VISIBLE}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/mainProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:visibility="@{safeUnbox(restaurantViewModel.isWaiting) ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
